--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -4,7 +4,15 @@
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
-  <title>React & Express Template</title> 
+  <title>React & Express Template</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+    }
+  </style>
 </head> 
 <body> 
   <section id="app"></section> 
