booking page -> movie page, also made the path dynamic

--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -15,6 +15,7 @@
   </style>
 </head> 
 <body> 
-  <section id="app"></section> 
+  <section id="app"></section>
+  <script src="/main.js"></script>
 </body> 
 </html> 
