--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -4,9 +4,19 @@
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
-  <title>React & Express Template</title> 
+  <title>React & Express Template</title>
+
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap%27');
+  </style>
+
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap%27');
+</style>
+
+  
 </head> 
 <body> 
-  <section id="app"></section> 
+  <section id="app"></section>
 </body> 
 </html> 
