--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -8,14 +8,45 @@
 
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
-  </style>
-  
-  <style>
     @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
+
+    html, body {
+      margin: 0;
+      padding: 0;
+      background-color: #141414;
+    }
+
+    button {
+      background: #009556;
+      box-shadow: 0px 4px 0px #02683D;
+      -webkit-box-shadow: 0px 4px 0px #02683D;
+      -moz-box-shadow: 0px 4px 0px #02683D;
+      border: none;
+      color: white;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-family: 'Nunito';
+      font-style: normal;
+      font-weight: 700;
+    }
+
+    button:hover {
+      background: #009e5c;
+    }
+
+    button:active {
+      background: #009556;
+      box-shadow: none;
+      transform: translate(0, 4px);
+    }
+
   </style>
 
-</head> 
-<body> 
+</head>
+<body>
   <section id="app"></section> 
-</body> 
-</html> 
+</body>
+</html>
