--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
-  <title>React & Express Template</title> 
+  <title>Cinema</title> 
 
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
@@ -42,6 +42,8 @@
       box-shadow: none;
       transform: translate(0, 4px);
     }
+
+
 
   </style>
 
