--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -14,6 +14,7 @@
       margin: 0;
       padding: 0;
       background-color: #141414;
+      padding: 0 6%;
     }
 
     button {
@@ -42,6 +43,22 @@
       box-shadow: none;
       transform: translate(0, 4px);
     }
+
+    .navItem {
+      text-decoration: none;
+      color: white;
+      font-family: 'Nunito';
+      font-style: 'bolder';
+      font-weight: '700';
+      padding-top: '60px';
+      margin-left: 50px;
+      opacity: 0.5;
+    }
+
+    .navItem:hover {
+      opacity: 1;
+    }
+
   </style>
 
 </head>
