styling for login and header

--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -15,6 +15,10 @@
       padding: 0;
       background-color: #141414;
       padding: 0 6%;
+      font-family: 'Nunito';
+      font-style: 'bolder';
+      font-weight: '700';
+      padding-top: '60px';
     }
 
     button {
@@ -44,7 +48,7 @@
       transform: translate(0, 4px);
     }
 
-    .navItem {
+    .link {
       text-decoration: none;
       color: white;
       font-family: 'Nunito';
@@ -55,7 +59,7 @@
       opacity: 0.5;
     }
 
-    .navItem:hover {
+    .link:hover {
       opacity: 1;
     }
 
