styling login and sigup also error handling for inavlid login and signup

--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -63,6 +63,12 @@
       opacity: 1;
     }
 
+    .shadow {
+      box-shadow: 0px 4px 0px #0E0E0E;
+      -webkit-box-shadow: 0px 4px 0px #0E0E0E;
+      -moz-box-shadow: 0px 4px 0px #0E0E0E;
+    }
+
   </style>
 
 </head>
