Return all requires data for mytickets

--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -38,6 +38,18 @@
       font-weight: 700;
     }
 
+    .redbtn {
+      background: #953600;
+      box-shadow: 0px 4px 0px #682702;
+      -webkit-box-shadow: 0px 4px 0px #682702;
+      -moz-box-shadow: 0px 4px 0px #682702;
+    }
+
+    .redbtn:hover  {
+      background: #b34200;
+
+    }
+
     button:hover {
       background: #009e5c;
     }
